# routes/api/auth.php
@@ -1,0 +1,10 @@
+<?php
+
+declare(strict_types=1);
+
+use App\Http\Controllers\Auth\RegisterController;
+use Illuminate\Support\Facades\Route;
+
+Route::post('/register', RegisterController::class)
+    ->middleware(['guest'])
+    ->name('register');
