# routes/api/routes.php
@@ -2,12 +2,9 @@
 
 declare(strict_types=1);
 
-use App\Http\Controllers\Auth\RegisterController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
-Route::post('/register', RegisterController::class)
-    ->middleware('guest')
-    ->name('register');
+require base_path('routes/api/auth.php');
 
 Route::get('/user', fn (Request $request) => $request->user())->middleware('auth:sanctum');
